--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,7 @@
   <!-- add to homescreen for ios -->
   <!--<meta name="apple-mobile-web-app-capable" content="yes" />-->
   <!--<meta name="apple-mobile-web-app-status-bar-style" content="black" />-->
-  <link rel="stylesheet" href="/assets/main.css" />
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxU8GrWPyEsY_EsmXaNrRt7iDVTIDMw2A"
+  <link "
           async defer></script>
 </head>
 
