--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Pokemon</title>
 
   <base href="/" />
 
@@ -11,11 +11,11 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
-
+  <link rel="icon" href="/assets/icon/favicon.png" />
   <!-- add to homescreen for ios -->
   <!--<meta name="apple-mobile-web-app-capable" content="yes" />-->
   <!--<meta name="apple-mobile-web-app-status-bar-style" content="black" />-->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxU8GrWPyEsYY_EsmXaNrRt7iDVTIDMw2A"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxU8GrWPyEsY_EsmXaNrRt7iDVTIDMw2A"
           async defer></script>
   <link rel="stylesheet" href="/assets/main.css"  />
 </head>
