--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8p2Uwi22zFn5BaFoXjIQx4FbXjDiLyUk"
           async defer></script>
   <link rel="stylesheet" href="/assets/main.css"  />
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
 </head>
 
 <body>
